--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Phaser CE ParcelJS</title>
+    <meta charset="UTF-8">\
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Analog Digital Clock">
+    <meta property="og:site_name" content="Phaser-CE Clock">
+    <meta property="og:description" content="Built using Phaser-CE TypeScript Babel ParcelJS">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Cerlancism/Phaser-CE-Clock/master/ClockIcon.png">
+    <title>Analog Digital Clock</title>
     <style>
         html,
         body {
