--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">\
+    <meta charset="UTF-8">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Analog Digital Clock">
     <meta property="og:site_name" content="Phaser-CE Clock">
